--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run: gem install bundler
       - restore_cache:
           key: gems-{{ checksum "Gemfile.lock" }}
-      - run: bundle install
+      - run: bundle install --deployment --path vendor/bundle
       - save_cache:
           key: gems-{{ checksum "Gemfile.lock" }}
           paths:
