--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,12 @@ jobs:
           at: ~/repo
       - run:
           name: Bundle config
-          command: bundle install --path vendor/cache
+          command: |
+            sudo gem update --system
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
+            bundle install
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
