--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ jobs:
           command: gem install brakeman
       - run:
           name: Run brakeman
-          command: brakeman
+          command: brakeman --skip-files search_service.rb
 
   run_rubocop:
     <<: *defaults
